# startup-churn-class

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  tasks.py  train.py
.github/workflows/: ci.yml
artifacts/: metadata.json  metrics.json  model.joblib
data/raw/: startup_churn.csv
startup_churn_classifier/: __init__.py  cli.py  config.py  data.py  experiment_tracking.py  inference.py  preprocessing.py  training.py
startup_churn_classifier/api/: logging.py  main.py  metrics.py  schemas.py
startup_churn_classifier/api/static/: app.js  index.html  styles.css
startup_churn_classifier/models/: pytorch_mlp.py
tests/: test_api.py  test_dashboard.py  test_preprocessing.py
