[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "startup-churn-classifier"
version = "0.1.0"
description = "End-to-end startup churn classification pipeline with FastAPI serving."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Mirza Yousuf Zulfiqar Baig", email = "myzbaig@mun.ca" }
]
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pandas==2.3.2",
  "numpy==2.1.3",
  "scikit-learn==1.6.1",
  "torch==2.8.0",
  "joblib==1.5.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "httpx==0.28.1",
]

[project.scripts]
startup-churn = "startup_churn_classifier.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["startup_churn_classifier*"]

[tool.setuptools.package-data]
"startup_churn_classifier.api" = ["static/*"]
